# -Detection-and-Mitigation-of-Multimodal-Privacy-Leaks-in-AI-Systems-and-Social-Platforms

./: Dockerfile  Leak Watch – High Level Design (phase 2).txt  README.md  Team 188_Phase 1_Capstone Report_old.txt  pyproject.toml
artifacts/: demo_email.sanitized.spans.txt  demo_email.sanitized.txt
config/: leakwatch.yaml
docs/: ARCHITECTURE.md  COPILOT_MEMORY.md  IMPLEMENTATION_PLAN.md
leakwatch/: __init__.py  __main__.py
leakwatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
leakwatch/adapters/: __init__.py
leakwatch/detection/: __init__.py  image.py  text.py
leakwatch/explainability/: __init__.py  audit.py  image.py  text.py
leakwatch/mitigation/: __init__.py  image.py  text.py
leakwatch/orchestration/: __init__.py  pipeline.py
leakwatch/utils/: __init__.py  config.py  logging.py  types.py
samples/audio/: demo_call.txt
samples/text/: demo_email.txt
scripts/: download_models.py  extract_pdf_text.py  generate_demo_media.py
service/: app.py
tests/: test_text_pipeline.py
