[project]
name = "leakwatch"
version = "0.1.0"
description = "Multimodal privacy leak detection and mitigation middleware"
authors = [
    { name = "Team 188", email = "team188@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "spacy>=3.7",
    "opencv-python>=4.9",
    "easyocr>=1.7",
    "pillow>=10.2",
    "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.1"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["leakwatch*"]
